--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "Javascript client interface for your theblogapi.com resources.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc src/index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.1",
-    "typescript": "^4.9.5"
+    "axios": "^1.3.1"
   }
 }
